--- a/src/App.css
+++ b/src/App.css
@@ -3,37 +3,40 @@
   margin: auto;
   padding: 20px;
   border: 5px;
-  background-color:#ededed;
+  background-color: #ededed;
   margin-bottom: 10px;
   border-radius: 10px;
-
-
-
+  margin-top: 20px;
 }
 
-label{
+label {
   margin-right: 10px;
   display: block;
-  font-weight: 400;
+  font-weight: 700;
   margin-bottom: 10px;
-
-
 }
-
-input{
+#form #review {
+  height: auto;
+  word-wrap: break-word;
+}
+input,
+textarea {
   width: 100%;
   border-radius: 5px;
-  border: 1px solid black;
-  margin-bottom: 10px;
-  height: 30px;
+  margin-bottom: 5px;
   border: none;
-  
-
+}
+input{
+  min-height:30px;
 
 }
-input:focus{
- outline: none;
+textarea{
+  min-width: 50px;
+}
 
+
+input:focus, textarea:focus {
+  outline: none;
 }
 
 button {
@@ -46,36 +49,43 @@ button {
   border: none;
   cursor: pointer;
   font-weight: bold;
-
-
-
 }
 
-.card{
+.card {
   margin: auto;
-  background-color:#ededed;
+  background-color: whitesmoke;
   width: 33%;
   display: flex;
-  flex-direction: column;
   border-radius: 10px;
-
+  display: flex;
+  align-items: center;
+  height:300px;
 }
 
 img {
-margin: auto;
-border-radius: 3px;
-
+  margin: auto;
+  width: 50%;
+  height: 100%;
+  border-radius: 3px;
+  border: 1px solid rgb(38,104,120);
+}
+.description {
+  padding: 0 10px;
+  background-color: antiquewhite;
+  width: 50%;
+  height:100%;
 }
 
-h1, h2{
-  text-align: center;
-  color: green;
-   padding: 20px;
-
+.card h1 {
+  color:rgb(38,104,120);
+  font-size: 1.5rem;
+  margin-bottom: 5px;
 }
-
-p{
-  margin:  10px;
-  padding: 10px;
-  font-size: 15px;
+.card h2 {
+  color: blue;
+  font-size: 1.2rem;
+  margin-bottom: 5px;
+}
+.card p {
+  font-size: 1 rem;
 }
