--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ img {
   text-align: center;
   margin: 0;
 }
-#ratings span{
+#ratings span, #stars{
   font-size:1.5 rem;
   color:goldenrod;
 }
